--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,15 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Yearly"
+    url: /year-archive/
+  - title: "Monthly"
+    url: /month-archive/
+  - title: "Tag"
+    url: /tags/
+  - title: "Category"
+    url: /categories/
+#  - title: "About"
+#    url: /about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
